tests/expectations/compiler/records/nested_record_2_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372050]: A record cannot contain a tuple.
    --> compiler-test:7:9
     |
   7 |         foo: (Foo, Foo),
     |         ^^^
Error [ETYC0372030]: A struct or record cannot contain another record.
    --> compiler-test:7:9
     |
   7 |         foo: (Foo, Foo),
     |         ^^^
     |
     = Remove the record `Foo` from `Token2`.
Error [ETYC0372030]: A struct or record cannot contain another record.
    --> compiler-test:7:9
     |
   7 |         foo: (Foo, Foo),
     |         ^^^
     |
     = Remove the record `Foo` from `Token2`.
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:1:1
     |
   1 | 
   2 | 
   3 | program test.aleo {    
     | ^^^^^^^^^^^^
"""]
